#283 fix center z-index

--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -80,6 +80,7 @@ body {
         width: 50%;
         height: 100%;
         cursor: pointer;
+        z-index: 3;
 
         svg {
             position: absolute;
